        (with prefix afex.) and allows to reset all options via list (i.e.,:
        aop <- afex_options(); ...; afex_options(aov); works).
        
    o   renamed allFit() to all_fit() and argument meth.tab to meth_tab. 
        Added method dfoptim::nmkb() to all_fit(). To use nmkb, dfoptim needs to
        be loaded explicitly via library (see examples). 
        
    Bugfixes

    o   Sphericity correction now correctly displayed as none if all within-
        factors have only two levels (bug removed by Frederik Aust).
        
    o   removed bug when calling nice() on afex_aov objects created with 
        explicit effect size.
        
    o   aov_...(): anova_table = list(intercept = TRUE) now correctly suppresses
        the intercept (bug removed by Frederik Aust).
        
    o   aov_...(): return = "nice" did not work (bug removed by Frederik Aust).
    
    o   aov_...() now supports column names with spaces (using backticks), see: 
        https://github.com/singmann/afex/issues/22 Thx to Jonathan Love for fix.
        
    o   changed license to GPL >=2 (as it call some function from GPL >=2 
        packages).
        
    o   removed bug that mixed() object with type=2 could not be printed.
    
    o   removed bug that model names for anova.mixed with multiple models were 
        incorrect.
        
    o   all_fit() now uses a data argument correctly and passes it update(). 
        This again allows to use it for data with suppressed correlations. 
        all_fit(... verbose = TRUE) now correctly signals if a fit failed.
    
                    *************************
                    ** afex VERSION 0.16-x **
                    *************************
                    
                    Changes in afex Version 0.16-x
                    Released April 2016

    Significant User Visible Changes and New Features

    o   added "correction" and "observed" attributes to the anova_table slot of